--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "liammccartney-github-io",
   "private": true,
   "dependencies": {
-    "bootstrap-sass-official": "~3.3.1"
+    "bootstrap-sass-official": "~3.3.1",
+    "Hover": "~2.0.2"
   }
 }
