--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass-official": "~3.3.1",
-    "Hover": "~2.0.2"
+    "Hover": "~2.0.2",
+    "fontawesome": "~4.3.0"
   }
 }
